# OpenVINO_iGPU

./: async_infer_dummy.py  convert_mamba130m_to_openvino.py  convert_resnet50_to_openvino.py  infer_request_busy.py  requirements.txt  run.bat  run_mamba130m_openvino.py  throughput_30m.py
cpp_matmul_openvino/: CMakeLists.txt  main.cpp  mobilenet_ssd_async4.cpp
